# GoogleDriveApplication

./: README.md
google_drive_client/: CMakeLists.txt  ConnectionController.cpp  ConnectionController.h  File.cpp  File.h  FileWindow.cpp  FileWindow.h  FileWindow.ui  FileWorker.cpp  FileWorker.h  FileWorkerRequest.hpp  Request.cpp  Request.h  Task.cpp  Task.h  connectwindow.cpp  connectwindow.h  connectwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
google_drive_client/src/: main.cpp
google_drive_server/: CMakeLists.txt
google_drive_server/inc/: ConnectionController.h  GoogleDriveController.h  Request.h  Responce.h  Task.h  TaskController.h  User.h  UserController.h  lib.h
google_drive_server/key/: key.json
google_drive_server/src/: ConnectionController.cpp  GoogleDriveController.cpp  Request.cpp  Responce.cpp  Task.cpp  TaskController.cpp  User.cpp  UserController.cpp  main.cpp
